<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">VK News Viewer</string>
    <string name="like_button">Like</string>
    <string name="comment_button">Comment</string>
    <string name="share_button">Share</string>
    <string name="logo">Logo</string>
    <string name="image">Image</string>
    <string name="content_example">GoLand 2020.3 Early Access Program is starting!\n\nIt brings the ability to make goroutine dumps, initial support for table tests, upgrades for Testify support and code completion, UI improvements, and more!\n\nJoin the program, and give it a try: https://lnkd.in/eV8KnWn\n#golang</string>
    <string name="title_example">JetBrains</string>
    <string name="date_example">1 day ago</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="menu_favorites_list">Favorites</string>
    <string name="menu_news_list">News</string>
    <string name="menu_user_profile">Profile</string>
    <string name="connection_error">connection error</string>
    <string name="no_data_to_display">No data to display</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="loading_logo">loading logo</string>
    <integer name="com_vk_sdk_AppId" tools:keep="@integer/com_vk_sdk_AppId">7636870</integer>
    <string name="autologin">Auto login</string>
    <string name="action_sign_in">Sign in</string>
    <string name="vkLogo">VK Logo</string>
    <string name="login_failed">Login failed</string>
    <string name="image_saved_to_gallery">The image saved to gallery</string>
    <string name="sharing_image">Sharing image</string>
    <string name="read_more">…(read more)</string>
    <string name="empty_comment_footer">Nobody has written anything here yet.\nYou can be the first!</string>
    <string name="comment_hint">Comment</string>
    <string name="error_loading_comments_message">Failed to load comments, please check your internet connection and try again.</string>
    <string name="failed_to_send_comment">Failed to send comment</string>
    <string name="city">City: %s</string>
    <string name="education">Education: %s</string>
    <string name="followers_count">Followers: %d</string>
    <string name="was_online">was online: %s</string>
    <string name="career">Career: %s</string>
    <string name="what_is_new">What\'s new?</string>
    <string name="write_somethings">Write somethings…</string>
    <string name="about">About</string>
    <string name="demo_version">This option is not available in this version of the application.</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="hide_button">Hide</string>
    <string name="network_not_available">Default Network Not Available</string>
    <string name="open_user_profile_error_message">An error occurred while trying to open the profile.</string>
    <string name="send_commentary_button">Send commentary button</string>
    <string name="reload_commentary_button">Reload commentary button</string>
    <string name="send_new_wall_post">Send new wall post</string>
    <string name="disabled_comment">Comments on this post are disabled</string>
    <string name="online">Online</string>
</resources>